# Open3DR

./: .coverage  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
open3d/: __init__.py
open3d/agents/: __init__.py  reconstruction.py
open3d/api/: __init__.py  app.py
open3d/api/routers/: __init__.py  clinical_decision.py  drug_discovery.py  medical_diagnostics.py  medical_imaging.py  medical_research.py  medical_websocket.py  patient_monitoring.py  reconstruction.py
open3d/core/: __init__.py  config.py  engine.py  types.py  utils.py
open3d/data/: __init__.py  datasets.py  formats.py  loaders.py  transforms.py  utils.py
open3d/neural_rendering/: __init__.py  base.py  gaussian_splatting.py  nerf.py  neural_fields.py
scripts/: publish_to_github.sh  start.sh
tests/: __init__.py  test_api.py
